# LearnCMake

./: .gitignore  CMakeLists.txt  CMakeRun.bat
CMake/: CMakeLists.txt  CMakeRun.bat
